# csci2041

./: README.md
Hwk_01/: literacy.ml  mastery.ml  warmup.ml
Hwk_02/: literacy.ml  warmup.ml
Hwk_02/src/: dune  literacy.ml  literacy.mli  mastery.ml  mastery.mli  warmup.ml  warmup.mli
Hwk_02/tests/: dune  literacy_tests.ml  mastery_tests.ml  warmup_tests.ml
Hwk_03/: literacy.ml  mastery.ml  warmup.ml
Hwk_03/src/: dune  enrichment.mli  literacy.mli  mastery.ml  mastery.mli  warmup.mli
Hwk_05/: literacy.md  mastery.md  warmup.md
Hwk_07/: dune  formula.ml  literacy.ml  literacy_tests.ml  literacy_tests_run.ml  mastery.ml  mastery_tests.ml  mastery_tests_run.ml  warmup.ml  warmup_tests.ml  warmup_tests_run.ml
In_Class/: 01_22.md  01_24.ml  01_26.ml  01_29.ml  01_31.ml  02_02.ml  02_05.ml  02_07.ml  02_12.ml  02_14.ml  02_19.ml  02_21.ml  02_26.ml  02_28.ml  03_01.ml  03_11.ml  03_15.ml  03_18.md  03_22.md  03_25.md  03_27.md  03_29.md  04_01.ml  04_05.ml  04_08.ml  04_17.ml  04_22.ml  04_24.md  04_26.ml
Lab_01/: fib.ml
Lab_02/: area.ml
Lab_03/: lab_03.ml
Lab_04/: lab_04.ml
Lab_05(Quiz1)/: Quiz_prep.ml
Lab_06/src/: dune  lab_06.ml  lab_06.mli
Lab_06/tests/: dune  lab_06_tests.ml
Lab_07/src/: dune  lab_07.ml  lab_07.mli
Lab_07/tests/: dune  lab_07_tests.ml
Lab_08/src/: dune  io.ml  io.mli  lab_08.ml  lab_08.mli
Lab_09/src/: dune  io.ml  io.mli  lab_09.ml  lab_09.mli
Lab_09/tests/: dune  lab_09_tests.ml
Lab_10/: lab_10.md
Lab_12/runtest/: dune  runtest.ml
Lab_12/src/: expr.ml
Lab_12/tests/: dune  tests.ml
Lab_13/: formula.ml
(+34 files in other folders)
